--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <header class="header">
-        <div class="container">
+        <div class="container container_navigation">
             <div class="header__navigation navigation navigation_type_header">
 
                 <a href="#" class="navigation__logo"></a>
@@ -41,7 +41,7 @@
 
                     <h1 class="cover__title section__title-main">Заголовок c уникальным торговым предложение по системе 4U</h1>
 
-                    <p class="cover__text">Описания предлжения компании. Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему.</p>
+                    <p class="cover__text">Описания предлжения компании. Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более<span class="cover__text-hide"> менее осмысленного текста рыбы на русском языке, а начинающему</span>.</p>
 
                     <a class="section__button section__button_padding_wide" href="#">Подробнее</a>
 
@@ -203,7 +203,7 @@
 
     <footer class="footer">
 
-        <div class="container">
+        <div class="container container_navigation">
 
             <div class="footer__navigation navigation navigation_type_footer">
 
